--- a/indexL3.html
+++ b/indexL3.html
@@ -4,47 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-
-   .myfun {
-    background-color:black;
-    color: white;
-    font-size: 25px;
-  }
-
-  .item{
-    height: 80vh;
-    display: flex;
-    justify-content: flex-end;
-    align-items: flex-end;
-    width: 100%;    
-  }
-  .item2{
-    width: 100%;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center ;
-  }
-
-  .mydiv{
-    display: flex;
-    height: 80vh;
-    width: 100%;
-  }
-
-  .fontSize{
-    font-size: 30px;
-  }
-
-  .img2{
-    background-image: url("./img/f2.jpg");
-  }
-    </style>
 </head>
-
 <body>
 
-    <P id="parg"><P>
+    <P id="parg"> Rose is a term of ornamental plants <P>
     <button onclick="text()">Show text</button>
     <div>
         <P id="parg1"></P>
